project (muduo_net)
cmake_minimum_required (VERSION 3.22)

include(CheckFunctionExists)

check_function_exists(accept4 HAVE_ACCEPT4)
if(NOT HAVE_ACCEPT4)
  set_source_files_properties(SocketsOps.cc PROPERTIES COMPILE_FLAGS "-DNO_ACCEPT4")
endif()


set (CMAKE_CXX_STANDARD 11)


set(net_SRCS
  Channel.cc
  EventLoop.cc
  Poller.cc
  poller/PollPoller.cc
  poller/DefaultPoller.cc
  # poller/EPollPoller.cc
)

  
add_library(muduo_net ${net_SRCS})
target_link_libraries(muduo_net muduo_base)

install(TARGETS muduo_net DESTINATION lib)

set(HEADERS
  # Buffer.h
  # Callbacks.h
  Channel.h
  # Endian.h
  Poller.h
  EventLoop.h
  # EventLoopThread.h
  # EventLoopThreadPool.h
  # InetAddress.h
  # TcpClient.h
  # TcpConnection.h
  # TcpServer.h
  # TimerId.h
  )
install(FILES ${HEADERS} DESTINATION include/muduo/net)

# add_subdirectory(http)
# add_subdirectory(inspect)

if(MUDUO_BUILD_EXAMPLES)
  add_subdirectory(tests)
endif()

# if(PROTOBUF_FOUND)
#   add_subdirectory(protobuf)
#   add_subdirectory(protorpc)
# else()
#   add_subdirectory(protobuf EXCLUDE_FROM_ALL)
#   add_subdirectory(protorpc EXCLUDE_FROM_ALL)
# endif()

